New weather update method in Informer.elf Instruction in /elf/Informer/res/Readme.txt

--- a/elf/Informer/res/Informer.ini
+++ b/elf/Informer/res/Informer.ini
@@ -66,6 +66,8 @@ Key1_Update=2        ; кнопки обновления погоды
 Key2_Update=3
 Key3_Update=17
 
+ID=26850             ; id города. коды города смотреть тут http://informer.gismeteo.ru/getcode/xml.php
+
 Show_Date=yes        ; показывать дату
 Show_Temperature=yes ; показать температуру
 Show_Wind=yes        ; показать ветер
